# thuso-medical

./: .gitignore  README.md  main.py  pyproject.toml  safe_chatbot_agent_policy.txt
.github/: pull_request_template.md
app/: Dockerfile  app.ipynb  app.py
app-deprecated/: Dockerfile  requirements.txt
docs/: 00-grc.md  00.1-grc-sop-drafts.md  00.2.1-clinical_safety_risk_mitigation.md  01-requirements.md
